---------------------------------------------------------------------------------------------------
Version: 2.0.7
Date: ????
  Changes:
    - correct dependency threshold for factorio >=2.0.58 for `mod-data` prototypes
---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: 2025-07-31
  Changes:
    - add `:` character mapping for alpha nixies too
---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: 2025-07-31
  Changes:
    - add `:` character
    - add time formatter (60)
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2025-07-30
  Changes:
    - support other mods registering additional number formats
    - use the entity color if 'Use Colors' option is not selected
      - entity color changes may not be reflected immediately, update the value or format signals to force a refresh
      - a one-time migration will reset the colors to default on tubes that were set as white, as this seems to be a common condition for old blueprint
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2025-07-18
  Changes:
    - updated icons of remaining extra virtual signals to match 2.0 style
    - fix colors on alpha nixies
    - enable/disable conditions now work on alpha nixies to turn the dispaly off entirely
    - enable/disable condition now forced always-on for numeric nixies (used for tracking when signals changes)
    - renamed `signal-float` to `signal-number-type`
    - added fixed-point and unsigned number types
    - added four char ASCII and Typecode types. `signal-number-type` always renders as Typecode.
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025-02-11
  Changes: